# reinforcement_learning

./: .gitignore  base.py  dqn.py  gridworld.py  main.py  mc_methods.py  mdp.py  plackett_luce.py  plot_history.py  pyproject.toml  q_learning.py  td_lambda.py  td_learn.py  utils.py
results/DQN/: history.csv
results/PER/: history.csv
results/doubleDQN/: history.csv
results/duelingDQN/: history.csv
